syntax = "proto3";
package DeltaChain.rpc.grpc;
option  go_package = "github.com/DeltaChain/DeltaChain/rpc/grpc;coregrpc";

import "DeltaChain/abci/types.proto";

//----------------------------------------
// Request types

message RequestPing {}

message RequestBroadcastTx {
  bytes tx = 1;
}

//----------------------------------------
// Response types

message ResponsePing {}

message ResponseBroadcastTx {
  DeltaChain.abci.ResponseCheckTx   check_tx   = 1;
  DeltaChain.abci.ResponseDeliverTx deliver_tx = 2;
}

//----------------------------------------
// Service Definition

service BroadcastAPI {
  rpc Ping(RequestPing) returns (ResponsePing);
  rpc BroadcastTx(RequestBroadcastTx) returns (ResponseBroadcastTx);
}
